# ndvi-rag

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/aoi/: midelt_region.geojson  midelt_region_larger.geojson  midelt_region_utm_aligned.geojson
notebooks/: explore_ndvi_data.ipynb
src/ndvi_rag/: __init__.py
src/ndvi_rag/data/: __init__.py  ingestion.py  sentinel_processor.py
