[project]
name = "ndvi-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.8",
    "dask>=2025.4.1",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "netcdf4>=1.7.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "ruff>=0.11.8",
    "s3fs>=0.4.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.0",
    "types-boto3>=1.38.8",
    "types-requests>=2.32.0.20250328",
    "xarray>=2025.4.0",
]
